[gd_scene load_steps=15 format=3 uid="uid://ddnsu8hllewh7"]

[ext_resource type="Script" path="res://Zones/BaseScene.gd" id="1_3m1id"]
[ext_resource type="Script" path="res://CustomCamera.gd" id="1_yk0hc"]
[ext_resource type="PackedScene" uid="uid://vpck8gxc3g0" path="res://Player/Player.tscn" id="2_21w2i"]
[ext_resource type="PackedScene" uid="uid://cgfm1ac4pe23t" path="res://Ui/GameUI/GameUI.tscn" id="4_i5ie3"]
[ext_resource type="Script" path="res://Dialogs.gd" id="5_3r0j6"]
[ext_resource type="Script" path="res://CutsceneBars.gd" id="6_f08no"]
[ext_resource type="Script" path="res://Ui/GameUI/PauseMenu.gd" id="7_f4tx3"]
[ext_resource type="Shader" path="res://Shaders/Blur.gdshader" id="8_4hluv"]
[ext_resource type="FontFile" uid="uid://ygvmsmppelgp" path="res://Assets/fonts/PixeloidSans-JR6qo.ttf" id="9_0jh1n"]

[sub_resource type="Animation" id="Animation_58ieq"]
resource_name = "Hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(2.08165e-12, -90)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 990), Vector2(2.08165e-12, 1080)]
}

[sub_resource type="Animation" id="Animation_6qty8"]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, -90), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 1080), Vector2(0, 990)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_btnq7"]
_data = {
"Hide": SubResource("Animation_58ieq"),
"Show": SubResource("Animation_6qty8")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aq4yp"]
shader = ExtResource("8_4hluv")
shader_parameter/amount = 1.5

[sub_resource type="LabelSettings" id="LabelSettings_ipaw4"]
font = ExtResource("9_0jh1n")
font_size = 46
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="BaseScene" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_3m1id")
initial_scene = "res://Zones/ForestGrove/ForestGrove.tscn"

[node name="Camera" type="Camera2D" parent="." node_paths=PackedStringArray("targeted_node") groups=["camera"]]
position = Vector2(-60, 0)
zoom = Vector2(6, 6)
position_smoothing_enabled = true
position_smoothing_speed = 1.0
script = ExtResource("1_yk0hc")
targeted_node = NodePath("../Player")

[node name="Player" parent="." instance=ExtResource("2_21w2i")]
position = Vector2(-60, -5)
motion_mode = 1

[node name="World" type="Node2D" parent="." groups=["world"]]
y_sort_enabled = true

[node name="UserInterface" type="CanvasLayer" parent="." groups=["UserInterfaceCanvas"]]

[node name="GameUI" parent="UserInterface" node_paths=PackedStringArray("player") instance=ExtResource("4_i5ie3")]
player = NodePath("../../Player")

[node name="Dialogs" type="Control" parent="UserInterface"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_3r0j6")

[node name="CutsceneBars" type="Control" parent="UserInterface"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_f08no")

[node name="ColorRect" type="ColorRect" parent="UserInterface/CutsceneBars"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 89.9999
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="UserInterface/CutsceneBars"]
layout_mode = 0
offset_top = 990.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="UserInterface/CutsceneBars"]
libraries = {
"": SubResource("AnimationLibrary_btnq7")
}

[node name="PauseMenu" type="Control" parent="UserInterface"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("7_f4tx3")

[node name="ColorRect" type="ColorRect" parent="UserInterface/PauseMenu"]
material = SubResource("ShaderMaterial_aq4yp")
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="CenterContainer" type="CenterContainer" parent="UserInterface/PauseMenu/ColorRect"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Pause" type="Label" parent="UserInterface/PauseMenu/ColorRect/CenterContainer"]
layout_mode = 2
text = "- PAUSE -"
label_settings = SubResource("LabelSettings_ipaw4")
